@@ -39,6 +39,8 @@ Features added
   type
 * #8573: napoleon: Allow to change the style of custom sections using
   :confval:`napoleon_custom_styles`
+* #8004: napoleon: Type definitions in Google style docstrings are rendered as
+  references when :confval:`napoleon_preprocess_types` enabled
 * #6241: mathjax: Include mathjax.js only on the document using equations
 * #8651: std domain: cross-reference for a rubric having inline item is broken
 * #8681: viewcode: Support incremental build
